--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+softether (4.08.9449-1~trusty) trusty; urgency=low
+
+  [ dnobori ]
+  * v4.08-9449-rtm
+
+ -- Darik Horn <dajhorn@vanadac.com>  Sun, 08 Jun 2014 12:32:25 -0400
+
 softether (4.06.9448-1~trusty) trusty; urgency=low
 
   [ dnobori ]
