--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+softether (4.08.9449-2~trusty) trusty; urgency=low
+
+  * Create a release branch for Ubuntu 14.04 Trusty Tahr.
+
+ -- Darik Horn <dajhorn@vanadac.com>  Fri, 11 Jul 2014 15:02:15 -0400
+
 softether (4.08.9449-1~trusty) trusty; urgency=low
 
   [ dnobori ]
