--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+softether (4.08.9449-3~precise) precise; urgency=low
+
+  * Change GetExeDir to GetStateDir in Cedar and Mayaqua.
+
+ -- Darik Horn <dajhorn@vanadac.com>  Fri, 11 Jul 2014 16:24:23 -0400
+
 softether (4.08.9449-2~precise) precise; urgency=low
 
   * Create a release branch for Ubuntu 12.04 Precise Pangolin.
