--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+softether (4.08.9449-4~precise) precise; urgency=low
+
+  * Add TUN devices to the apparmor profile.
+
+ -- Darik Horn <dajhorn@vanadac.com>  Fri, 11 Jul 2014 20:39:52 -0400
+
 softether (4.08.9449-3~precise) precise; urgency=low
 
   * Change GetExeDir to GetStateDir in Cedar and Mayaqua.
